--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@
 # Archivos compilados de Python
 __pycache__/
 *__pycache__/
-*/__pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 *.pyc
+*.pyo
 *.cpython-311.pyc
 *__pycache__/.cpython-311.pyc
 # Distribuciones / empaquetado
